--- a/server/.env.example
+++ b/server/.env.example
@@ -4,7 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL = "mysql://root:@localhost:3307/db_kamarPintar"
-JWT_SECRET = "1q2w3e4r5t6y"
+# DATABASE_URL="mysql://root:@localhost:3307/db_kamarPintar"
+DATABASE_URL="mysql://user:pass@localhost:port/databaseName"
 
-PORT = 3000
+JWT_SECRET="1q2w3e4r5t6y"
+
+PORT=3000
